--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -31,21 +31,21 @@
           placeholder="Enter phone number">
       </div>
       <div class="form-group">
-        <label for="registerStreetAddress">StreetAddress</label>
+        <label for="registerStreetAddress">Street Address</label>
         <input asp-for=StreetAddress type="text" class="form-control" id="registerStreetAdress"
-          placeholder="Enter Streetadress">
+          placeholder="Enter street adress">
       </div>
       <div class="form-group">
-        <label for="registerZipCode">ZipCode</label>
-        <input asp-for=ZipCode type="text" class="form-control" id="registerZipCode" placeholder="Enter Zipcode">
+        <label for="registerZipCode">Zip Code</label>
+        <input asp-for=ZipCode type="text" class="form-control" id="registerZipCode" placeholder="Enter zip code">
       </div>
       <div class="form-group">
         <label for="registerCity">City</label>
-        <input asp-for=City type="text" class="form-control" id="registerCity" placeholder="Enter City">
+        <input asp-for=City type="text" class="form-control" id="registerCity" placeholder="Enter city">
       </div>
       <div class="form-group">
         <label for="registerCountry">Country</label>
-        <input asp-for=Country type="text" class="form-control" id="registerCity" placeholder="Enter City">
+        <input asp-for=Country type="text" class="form-control" id="registerCity" placeholder="Enter country">
       </div>
       <div class="form-group">
         <label for="registerPassword">Password</label>
@@ -54,7 +54,7 @@
       <div class="form-group">
         <label for="confirmPassword">Confirm Password</label>
         <input asp-for=RepeatPassword type="password" class="form-control" id="confirmPassword"
-          placeholder="Confirm password">
+          placeholder="Confirm Password">
       </div>
       <button type="submit" class="btn btn-primary btn-block">Register</button>
       <div asp-validation-summary="ModelOnly" class="text-danger"></div>
