--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -8,17 +8,17 @@
 <img class="background-image" src="~/Pictures/HattarBild.jpg" alt="Background Image">
 <div class="container">
   <div class="login-box">
-    <h2 class="text-center mb-4">Log In</h2>
+    <h2 class="text-center mb-4">Log in</h2>
     <form method="post">
       <div class="form-group">
         <label for="loginEmail">Email address</label>
-        <input asp-for=userName type="text" class="form-control" id="loginEmail" aria-describedby="emailHelp" placeholder="Enter email">
+        <input asp-for=userName type="text" class="form-control" id="loginEmail" aria-describedby="emailHelp" placeholder="Email">
       </div>
       <div class="form-group">
         <label for="loginPassword">Password</label>
         <input asp-for=password type="password" class="form-control" id="loginPassword" placeholder="Password">
       </div>
-      <button type="submit" class="btn btn-primary btn-block">Log In</button>
+      <button type="submit" class="btn btn-primary btn-block">Log in</button>
     </form>
     <p class="text-center mt-3">Are you not a registered customer? <a href="Register">Register here</a></p>
   </div>
