--- a/Views/Model/EditModel.cshtml
+++ b/Views/Model/EditModel.cshtml
@@ -1,7 +1,6 @@
 @model ModelViewModel
 
-<h1 style="text-align: center;">EDIT MODEL</h1>
-<br />
+<h2 style="text-align: center;">EDIT MODEL</h2><br />
 <br />
 <script>
     function previewImage(event) {
