--- a/Views/Order/OrderForm.cshtml
+++ b/Views/Order/OrderForm.cshtml
@@ -1,12 +1,11 @@
 ﻿
 @model OrderViewModel
 <form asp-action="OrderForm" method="post">
-        <h1>Order your hat here:</h1>
+    <h2 style="text-align: center;">ORDER YOUR HAT HERE</h2>
         <br />
 
         <div class="form-group">
-            <label asp-for="Size">Size: </label>
-            <p>Please enter how big head you have here in cm</p>
+            <label asp-for="Size">Please enter how big head you have here in cm:</label>
             <textarea asp-for="Size" class="form-control"></textarea>
             <span asp-validation-for="Size" class="text-danger"></span>
         </div>
