--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -6,23 +6,7 @@
 
 <div class="text-center">
   <h2>Welcome to Otto's Fashionable Hats</h2>
-  <div class="text-container">
-
-    <br />
-    <p>Experience tradition and innovation in a vibrant array of hats and craftsmanship at Otto the Hatter's
-      store, located in the heart of Örebro. Otto, a master of his trade, has turned his passion for hats into
-      a thriving business that attracts customers from near and far.</p>
-    <p>In our store, you'll find a wide selection of handmade hats of the highest quality, crafted with care and
-      expertise. From elegant fedoras to classic bowlers and trendy snapbacks – we have something for every
-      taste and style.</p>
-    <p>We collaborate with carefully selected suppliers from around the world to ensure that our hats meet the
-      highest standards. From exclusive wools from Scotland to soft textures from Italy, we always strive to
-      offer the best in hat fashion.</p>
-    <p>Among our clientele are both the city's dignitaries and celebrities from near and far, all of whom
-      appreciate the unique feel and quality of a hat from Otto the Hatter. We invite you to discover the
-      wonderful world of hats with us – each hat tells its own story, let us help you find yours.</p>
-  </div>
-</div>
+ </div>
 <div class="gallery">
   <div class="hat">
     <img src="~/Pictures/HattarBild2.jpg" alt="Image of leather hat">
@@ -44,5 +28,31 @@
       <h2>Straw Hat</h2>
       <p>A cool and stylish hat for summer days.</p>
     </div>
+        
   </div>
+ 
+</div>
+<div class="text-container">
+
+    <br />
+    <p>
+        Experience tradition and innovation in a vibrant array of hats and craftsmanship at Otto the Hatter's
+        store, located in the heart of Örebro. Otto, a master of his trade, has turned his passion for hats into
+        a thriving business that attracts customers from near and far.
+    </p>
+    <p>
+        In our store, you'll find a wide selection of handmade hats of the highest quality, crafted with care and
+        expertise. From elegant fedoras to classic bowlers and trendy snapbacks – we have something for every
+        taste and style.
+    </p>
+    <p>
+        We collaborate with carefully selected suppliers from around the world to ensure that our hats meet the
+        highest standards. From exclusive wools from Scotland to soft textures from Italy, we always strive to
+        offer the best in hat fashion.
+    </p>
+    <p>
+        Among our clientele are both the city's dignitaries and celebrities from near and far, all of whom
+        appreciate the unique feel and quality of a hat from Otto the Hatter. We invite you to discover the
+        wonderful world of hats with us – each hat tells its own story, let us help you find yours.
+    </p>
 </div>
