--- a/Views/Model/EditModel.cshtml
+++ b/Views/Model/EditModel.cshtml
@@ -57,13 +57,14 @@
                         <label>Change product code: </label>
                     </div>
                     <select asp-for="ProductCode" class="form-control">
-                        <option value="6500 00 00 00">6500 00 00 00</option>
-                        <option value="6504 00 00 00">6504 00 00 00</option>
-                        <option value="6505 00 00 00">6505 00 00 00</option>
-                        <option value="6506 00 00 00">6506 00 00 00</option>
-                        <option value="6507 00 00 00">6507 00 00 00</option>
-                        <option value="6812 00 00 00">6812 00 00 00</option>
-                        <option value="6812 91 00 00">6812 91 00 00</option>
+                        <option value="6500 00 00 00">6500 00 00 00 - HEADGEAR AND PARTS OF HEADGEAR</option>
+                        <option value="6504 00 00 00">6504 00 00 00 - Hats and other headgear, plaited or assembled
+                            from strips or strips of all kinds</option>
+                        <option value="6505 00 00 00">6505 00 00 00 - Hats and other headgear, of knitted fabric or madefrom lace, felt</option>
+                        <option value="6506 00 00 00">6506 00 00 00 - Other headgear, including unlined and ungarnished</option>
+                        <option value="6507 00 00 00">6507 00 00 00 - Chinstraps for headgear</option>
+                        <option value="6812 00 00 00">6812 00 00 00 - ,headgear, footwear and</option>
+                        <option value="6812 91 00 00">6812 91 00 00 - Clothing and accessories for clothing as well as footwear and headgear</option>
                     </select>
                 </div>
                 <br />
