--- a/Views/Model/HandleModels.cshtml
+++ b/Views/Model/HandleModels.cshtml
@@ -69,7 +69,7 @@
                     <div class="col-sm-2" style="margin-right: 15px;">
                         <label>Model name: </label>
                     </div>
-                    <div class="col-sm-4" style="margin-bottom: 10px;">
+                    <div class="col-sm-6" style="margin-bottom: 10px;">
                         <input asp-for="ModelName" class="form-control" />
                     </div>
                 </div>
@@ -78,7 +78,7 @@
                     <div class="col-sm-2" style="margin-right: 15px;">
                         <label>Description: </label>
                     </div>
-                    <div class="col-sm-4" style="margin-bottom: 10px;">
+                    <div class="col-sm-6" style="margin-bottom: 10px;">
                         <input asp-for="Description" class="form-control" />
                     </div>
                 </div>
@@ -86,15 +86,18 @@
                     <div class="col-sm-2" style="margin-right: 15px;">
                         <label>Product code: </label>
                     </div>
-                    <div class="col-sm-4" style="margin-bottom: 10px;">
+                    <div class="col-sm-6" style="margin-bottom: 10px;">
                         <select asp-for="ProductCode" class="form-control">
-                            <option value="6500 00 00 00">6500 00 00 00</option>
-                            <option value="6504 00 00 00">6504 00 00 00</option>
-                            <option value="6505 00 00 00">6505 00 00 00</option>
-                            <option value="6506 00 00 00">6506 00 00 00</option>
-                            <option value="6507 00 00 00">6507 00 00 00</option>
-                            <option value="6812 00 00 00">6812 00 00 00</option>
-                            <option value="6812 91 00 00">6812 91 00 00</option>
+                            <option value="6500 00 00 00">1. HEADGEAR AND PARTS OF HEADGEAR</option>
+                            <option value="6504 00 00 00">
+                                2. Hats and other headgear, plaited or assembled
+                                from strips or strips of all kinds</option>
+                            <option value="6505 00 00 00">3. Hats and other headgear, of knitted fabric or made
+                                from lace, felt</option>
+                            <option value="6506 00 00 00">4. Other headgear, including unlined and ungarnished</option>
+                            <option value="6507 00 00 00">5. Chinstraps for headgear</option>
+                            <option value="6812 00 00 00">6. ,headgear, footwear and</option>
+                            <option value="6812 00 00 00">7. Clothing and accessories for clothing as well as footwear and headgear</option>
                         </select>
                     </div>
                     <div class="col-sm-2" style="margin-bottom: 10px;">
