--- a/Views/Material/ManageMaterial.cshtml
+++ b/Views/Material/ManageMaterial.cshtml
@@ -9,7 +9,7 @@
             <label>Material name:</label>
         </div>
         <div class="col-sm-6" style="margin-bottom: 10px;">
-            <input asp-for="ModelName" class="form-control" />
+            <input asp-for="Name" class="form-control" />
         </div>
     </div>
     <br />
@@ -53,3 +53,4 @@
     <button type="submit" class="btn btn-primary" asp-controller="Model" asp-action="AddNewModel">Add new
         model</button>
 </form>
+
