--- a/Views/Model/OurModels.cshtml
+++ b/Views/Model/OurModels.cshtml
@@ -1,3 +1,23 @@
 ﻿@model List<Model>
 
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>@ViewData["OurModels"] - Here you can see latest in fashion</title>
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/css/OurModels.css" asp-append-version="true" />
+</head>
 
+<div class="OurModels">
+    @foreach(var models in Model)
+    {
+    <div class="hats">
+        <img src="@models.ImagePath" alt="Image of hat">
+        <div class="info">
+            <h2>@models.ModelName</h2>
+            <btn class="SeeProduct">See product</btn>
+        </div>
+
+    </div>
+    }
+</div>
