--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -28,6 +28,13 @@
                   Models</a>
               </li>
             }
+            @if (user.IsAdmin())
+            {
+              <li class="nav-item">
+                <a class="nav-link text-dark" asp-area="" asp-controller="Material" asp-action="ManageMaterial">Manage
+                  Material</a>
+              </li>
+            }
             <li class="nav-item">
               <a class="nav-link text-dark" asp-area="" asp-controller="Order" asp-action="OrderForm">Order Form</a>
             </li>
