--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -27,6 +27,13 @@
                 <a class="nav-link text-dark" asp-area="" asp-controller="Model" asp-action="HandleModels">Manage
                   Models</a>
               </li>
+
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Supplier" asp-action="HandleSupplier">
+                                    Manage
+                                    Suppliers
+                                </a>
+                            </li>
             }
             <li class="nav-item">
               <a class="nav-link text-dark" asp-area="" asp-controller="Order" asp-action="OrderForm">Order Form</a>
