--- a/Views/Material/ManageMaterial.cshtml
+++ b/Views/Material/ManageMaterial.cshtml
@@ -26,27 +26,43 @@
             <label>Supplier:</label>
         </div>
         <div class="col-sm-6" style="margin-bottom: 10px;">
+             <select asp-for="SupplierID" class="form-control">
+                @foreach (var item in ViewBag.CurrentSuppliers)
+                {
+                    <option value="@item.Name">@item.Name</option>
+                }
+             </select>
         </div>
     </div>
     <div class="form-group row">
         <div class="col-sm-2" style="margin-right: 15px;">
             <label>Price:</label>
         </div>
+        <div class="col-sm-6" style="margin-bottom: 10px;">
+            <input asp-for="Price" class="form-control" />
+        </div>
     </div>
     <div class="form-group row">
         <div class="col-sm-2" style="margin-right: 15px;">
             <label>Unit:</label>
+       <div class="col-sm-6" style="margin-bottom: 10px;">
+            <div class="form-check">
+                <input type="radio" class="form-check-input" name="measurementType" id="meterRadio" value="Meter">
+                <label class="form-check-label" for="meterRadio">Meter</label>
+            </div>
+            <div class="form-check">
+                <input type="radio" class="form-check-input" name="measurementType" id="quantityRadio" value="Quantity">
+                <label class="form-check-label" for="quantityRadio">Quantity</label>
+            </div>
         </div>
-        <div class="col-sm-4" style="margin-bottom: 10px;">
-            <input type="file" name="imageFile" class="form-control-file" />
-        </div>
+
     </div>
     <div class="form-group row">
         <div class="col-sm-2" style="margin-right: 15px;">
             <label>Amount:</label>
         </div>
-        <div class="col-sm-4" style="margin-bottom: 10px;">
-            <input type="file" name="imageFile" class="form-control-file" />
+        <div class="col-sm-6" style="margin-bottom: 10px;">
+            <input asp-for="CurrentAmount" class="form-control" />
         </div>
     </div>
     <br />
