--- a/Views/Supplier/HandleSupplier.cshtml
+++ b/Views/Supplier/HandleSupplier.cshtml
@@ -1,164 +1,96 @@
-﻿@model SupplierViewModel
+﻿
+@model SupplierViewModel
 
 <h2 style="text-align: center;">MANAGE SUPPLIERS</h2>
-<br />
-<br />
+
 <div class="container">
     <div class="row">
         <div class="col-md-7">
             <h2>Current suppliers</h2>
-            <form method="post" asp-action="EditModel">
-                <div class="form-group">
-                    <table class="table table-striped">
-                        <thead>
-                            <tr>
-                          
-                                <th scope="col">Supplier name</th>
-                                <th scope="col">Material</th>
-                                <th scope="col">Email</th>
-                                <th scope="col">Phone number</th>
-                                <th scope="col">Address</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            @foreach (var currentSupplier in ViewBag.CurrentSuppliers)
-                            {
-                                <tr>
-                              
-                                    <td>@currentSupplier.Name</td>
-
-                                    <td>
-                                        <ul>
-                                            @foreach (var material in currentSupplier.Materials)
-                                            {
-                                                <li style="list-style: none;">@material.Name</li>
-
-                                            }
-                                        </ul>
-                                    </td>
-
-                                    <td>@currentSupplier.Email</td>
-                                    <td>@currentSupplier.TelephoneNumber</td>
-                                    <td>@currentSupplier.Address.StreetAddress @currentSupplier.Address.City</td>
-                                    
-                                    <td>
-                                        <form method="post" asp-action="EditModel">
-                                            <input type="hidden" name="ModelId" value="@currentSupplier.ID" />
-                                            <button type="submit" class="btn btn-primary btn-sm">Edit</button>
-                                        </form>
-                                    </td>
-                                    <td>
-                                        <form method="post" asp-action="DeleteModel">
-                                            <input type="hidden" name="ModelId" value="@currentSupplier.ID" />
-                                            <button type="submit" class="btn btn-primary btn-danger btn-sm">Delete</button>
-                                        </form>
-                                    </td>
-                                    <td>
-                                        <form method="post" asp-action="DeleteModel">
-                                         <input type="hidden" name="ModelId" value="@currentSupplier.ID" />
-                                        <button type="submit" class="btn btn-primary btn-success btn-sm">Order</button>
-                                        </form>
-                                    </td>
-                                </tr>
-                            }
-                        </tbody>
-                    </table>
-                </div>
-            </form>
+            <table class="table table-striped">
+                <thead>
+                    <tr>
+                        <th scope="col">Supplier name</th>
+                        <th scope="col">Material</th>
+                        <th scope="col">Email</th>
+                        <th scope="col">Phone number</th>
+                        <th scope="col">Address</th>
+                        <th scope="col"></th>
+                        <th scope="col"></th>
+                        <th scope="col"></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var currentSupplier in ViewBag.CurrentSuppliers)
+                    {
+                        <tr>
+                            <td>@currentSupplier.Name</td>
+                            <td>
+                                <ul>
+                                    @foreach (var material in currentSupplier.Materials)
+                                    {
+                                        <li>@material.Name</li>
+                                    }
+                                </ul>
+                            </td>
+                            <td>@currentSupplier.Email</td>
+                            <td>@currentSupplier.TelephoneNumber</td>
+                            <td>@currentSupplier.Address.StreetAddress, @currentSupplier.Address.City</td>
+                            <td>
+                                <form method="post" asp-action="EditModel">
+                                    <input type="hidden" name="ModelId" value="@currentSupplier.ID" />
+                                    <button type="submit" class="btn btn-primary btn-sm">Edit</button>
+                                </form>
+                            </td>
+                            <td>
+                                <form method="post" asp-action="DeleteModel">
+                                    <input type="hidden" name="ModelId" value="@currentSupplier.ID" />
+                                    <button type="submit" class="btn btn-primary btn-danger btn-sm">Delete</button>
+                                </form>
+                            </td>
+                            <td>
+                                <form method="post" asp-action="DeleteModel">
+                                    <input type="hidden" name="ModelId" value="@currentSupplier.ID" />
+                                    <button type="submit" class="btn btn-primary btn-success btn-sm">Order</button>
+                                </form>
+                            </td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
         </div>
-       @*  <div class="col-md-5">
-            <h2>Add new model</h2>
-            <form method="post" asp-action="AddNewModel" enctype="multipart/form-data">
-                <div class="form-group row">
-                    <div class="col-sm-2" style="margin-right: 15px;">
-                        <label>Model name: </label>
-                    </div>
-                    <div class="col-sm-6" style="margin-bottom: 10px;">
-                        <input asp-for="ModelName" class="form-control" />
-                    </div>
+        <div class="col-md-5">
+            <h2>Add new supplier</h2>
+            <form method="post" asp-action="AddNewSupplier" enctype="multipart/form-data">
+                <div class="form-group">
+                    <label>Supplier name:</label>
+                    <input asp-for="SupplierName" class="form-control" />
                 </div>
-                <br />
-                <div class="form-group row">
-                    <div class="col-sm-2" style="margin-right: 15px;">
-                        <label>Description: </label>
-                    </div>
-                    <div class="col-sm-6" style="margin-bottom: 10px;">
-                        <input asp-for="Description" class="form-control" />
-                    </div>
+                <div class="form-group">
+                    <label>E-mail:</label>
+                    <input asp-for="Email" class="form-control" />
                 </div>
-                <div class="form-group row">
-                    <div class="col-sm-2" style="margin-right: 15px;">
-                        <label>Product code: </label>
-                    </div>
-                    <div class="col-sm-6" style="margin-bottom: 10px;">
-                        <select asp-for="ProductCode" class="form-control">
-                            <option value="6500 00 00 00">1. HEADGEAR AND PARTS OF HEADGEAR</option>
-                            <option value="6504 00 00 00">
-                                2. Hats and other headgear, plaited or assembled
-                                from strips or strips of all kinds
-                            </option>
-                            <option value="6505 00 00 00">
-                                3. Hats and other headgear, of knitted fabric or made
-                                from lace, felt
-                            </option>
-                            <option value="6506 00 00 00">4. Other headgear, including unlined and ungarnished</option>
-                            <option value="6507 00 00 00">5. Chinstraps for headgear</option>
-                            <option value="6812 00 00 00">6. ,headgear, footwear and</option>
-                            <option value="6812 00 00 00">7. Clothing and accessories for clothing as well as footwear and headgear</option>
-                        </select>
-                    </div>
-                    <div class="col-sm-2" style="margin-bottom: 10px;">
-                        <button type="button" class="btn btn-primary" id="infoButton" style="font-size: 12px; background-color: white; color: black;">&#9432;</button>
-                    </div>
-                    <div id="infoPopup" class="infoPopup">
-                        <div class="infoPopup-content">
-                            <span class="close" onclick="closeInfoPopup()">&times;</span>
-                            <h1> Product code  - Description</h1>
-                            <p>6500 00 00 00 - HEADGEAR AND PARTS OF HEADGEAR</p>
-                            <p>
-                                6504 00 00 00 - Hats and other headgear, plaited or assembled
-                                from strips or strips of all kinds
-                            </p>
-                            <p>
-                                6505 00 00 00 - Hats and other headgear, of knitted fabric or made
-                                from lace, felt
-                            </p>
-                            <p>6506 00 00 00 - Other headgear, including unlined and ungarnished</p>
-                            <p>6507 00 00 00 - Chinstraps for headgear </p>
-                            <p>6812 00 00 00 - ,headgear, footwear and</p>
-                            <p>6812 91 00 00 - Clothing and accessories for clothing as well as footwear and headgear</p>
-                        </div>
-                    </div>
+                <div class="form-group">
+                    <label>Street address:</label>
+                    <input asp-for="StreetAddress" class="form-control" />
                 </div>
-                <div class="form-group row">
-                    <div class="col-sm-2" style="margin-right: 15px;">
-                        <label>Material(s): </label>
-                    </div>
-                    <div class="col-sm-4" style="margin-bottom: 10px;">
-                        @foreach (var material in ViewBag.CurrentMaterials)
-                        {
-                            <input type="checkbox" id="material-@material.ID" name="SelectedMaterials"
-                                   value="@material.ID" />
-                            @material.Name
-                            <br />
-                        }
-                    </div>
+                <div class="form-group">
+                    <label>Zip code:</label>
+                    <input asp-for="ZipCode" class="form-control" />
                 </div>
-                <div class="form-group row">
-                    <div class="col-sm-2" style="margin-right: 15px;">
-                        <label>Upload Image: </label>
-                    </div>
-                    <div class="col-sm-4" style="margin-bottom: 10px;">
-                        <input type="file" name="imageFile" class="form-control-file" />
-                    </div>
+                <div class="form-group">
+                    <label>City:</label>
+                    <input asp-for="City" class="form-control" />
                 </div>
-                <br />
-                <button type="submit" class="btn btn-primary" asp-controller="Model" asp-action="AddNewModel">
+                <div class="form-group">
+                    <label>Country:</label>
+                    <input asp-for="Country" class="form-control" />
+                </div>
+                <button type="submit" class="btn btn-primary" asp-controller="Supplier" asp-action="AddNewSupplier">
                     Add new
-                    model
+                    supplier
                 </button>
             </form>
-
         </div>
     </div>
-</div> *@
+</div>
