--- a/Views/Supplier/HandleSupplier.cshtml
+++ b/Views/Supplier/HandleSupplier.cshtml
@@ -71,6 +71,11 @@
                     <input asp-for="Email" class="form-control" />
                 </div>
                 <div class="form-group">
+                    <label>Phone number:</label>
+                    <input asp-for="TelephoneNumber" class="form-control" />
+                </div>
+
+                <div class="form-group">
                     <label>Street address:</label>
                     <input asp-for="StreetAddress" class="form-control" />
                 </div>
