--- a/Views/Model/ModelInfo.cshtml
+++ b/Views/Model/ModelInfo.cshtml
@@ -14,6 +14,24 @@
     }
 }
 <form asp-action="AddToCart" asp-controller="Cart" method="post">
+    <input type="hidden" asp-for="HatModel" name="HatModel" value="@Model.HatModel" />
+    <div class="form-group row">
+        <div class="col-sm-2" style="margin-right: 15px;">
+            <label>Size: </label>
+        </div>
+        <div class="col-sm-4" style="margin-bottom: 10px;">
+            <input asp-for="Size" class="form-control" />
+        </div>
+    </div>
+    <div class="form-group row">
+        <div class="col-sm-2" style="margin-right: 15px;">
+            <label>Description: </label>
+        </div>
+        <div class="col-sm-4" style="margin-bottom: 10px;">
+            <input asp-for="Description" class="form-control" />
+            <p><i>Please enter information that is kritisk for the hatmaking</i></p>
+        </div>
+    </div>
 
     
 </form>
