--- a/Views/Model/HandleModels.cshtml
+++ b/Views/Model/HandleModels.cshtml
@@ -17,6 +17,8 @@
                                 <th scope="col">Description</th>
                                 <th scope="col">Product code</th>
                                 <th scope="col">Materials</th>
+                                <th scope="col"></th>
+                                <th scope="col"></th>
                             </tr>
                         </thead>
                         <tbody>
