--- a/Views/Material/ManageMaterial.cshtml
+++ b/Views/Material/ManageMaterial.cshtml
@@ -5,7 +5,7 @@
     <div class="row">
         <div class="col-md-7">
             <h2>Current material</h2>
-            <form method="post" asp-action="EditModel">
+            <form method="post" asp-action="EditMaterial">
                 <div class="form-group">
                     <table class="table table-striped">
                         <thead>
@@ -34,13 +34,13 @@
                                         <td>@material.CurrentAmount</td>
                                         <td>
                                             <form method="post" asp-action="EditMaterial">
-                                                <input type="hidden" name="ModelId" value="@material.ID" />
+                                                <input type="hidden" name="MaterialId" value="@material.ID" />
                                                 <button type="submit" class="btn btn-primary btn-sm">Edit</button>
                                             </form>
                                         </td>
                                         <td>
                                             <form method="post" asp-action="DeleteMaterial">
-                                                <input type="hidden" name="ModelId" value="@material.ID" />
+                                                <input type="hidden" name="MaterialId" value="@material.ID" />
                                                 <button type="submit" class="btn btn-primary btn-danger btn-sm">Delete</button>
                                             </form>
                                         </td>
@@ -110,7 +110,6 @@
                         </div>
                     </div>
                 </div>
-
                 <div class="form-group row">
                     <div class="col-sm-2" style="margin-right: 15px;">
                         <label>Amount:</label>
