--- a/Views/Model/ModelInfo.cshtml
+++ b/Views/Model/ModelInfo.cshtml
@@ -1,7 +1,8 @@
-﻿@model HatViewModel
+﻿@* @model HatViewModel
 
+<link rel="stylesheet" href="~/css/ModelInfo.css">
 
-<img src="@Model.HatModel.ImagePath" alt="Picture on specific hat">
+<img class="HatPicture" src="@Model.HatModel.ImagePath" alt="Picture on specific hat">
 <h2>@Model.HatModel.ModelName</h2>
 <p>@Model.HatModel.Description</p>
 
@@ -34,4 +35,43 @@
     </div>
 
     
-</form>
+</form> *@
+
+            @model HatViewModel
+
+<link rel="stylesheet" href="~/css/ModelInfo.css">
+
+<div class="container">
+    <div class="content-box">
+        <img src="@Model.HatModel.ImagePath" alt="Picture on specific hat" class="hat-image">
+        <div class="text-content">
+            <h2>@Model.HatModel.ModelName</h2>
+            <p>@Model.HatModel.Description</p>
+
+            @if (@Model.HatModel.Materials != null && @Model.HatModel.Materials.Count() > 0)
+            {
+                <h3>Material</h3>
+                <ul>
+                    @foreach (var material in @Model.HatModel.Materials)
+                    {
+                        <li>@material.Name</li>
+                    }
+                </ul>
+            }
+
+            <form asp-action="AddToCart" asp-controller="Cart" method="post">
+                <input type="hidden" asp-for="HatModel" name="HatModel" value="@Model.HatModel" />
+                <div class="form-group">
+                    <label for="Size">Size: </label>
+                    <input asp-for="Size" class="form-control" id="Size" />
+                </div>
+                <div class="form-group">
+                    <label for="Description">Description: </label>
+                    <input asp-for="Description" class="form-control" id="Description" />
+                    <p><i>Please enter information that is critical for the hat making</i></p>
+                </div>
+                <input type="submit" value="Add to Cart" class="btn btn-primary">
+            </form>
+        </div>
+    </div>
+</div>
