--- a/Views/Supplier/HandleSupplier.cshtml
+++ b/Views/Supplier/HandleSupplier.cshtml
@@ -43,14 +43,14 @@
                                 </form>
                             </td>
                             <td>
-                                <form method="post" asp-action="DeleteModel">
-                                    <input type="hidden" name="ModelId" value="@currentSupplier.ID" />
+                                <form method="post" asp-action="DeleteSupplier">
+                                    <input type="hidden" name="SupplierId" value="@currentSupplier.ID" />
                                     <button type="submit" class="btn btn-primary btn-danger btn-sm">Delete</button>
                                 </form>
                             </td>
                             <td>
                                 <form method="post" asp-action="DeleteModel">
-                                    <input type="hidden" name="ModelId" value="@currentSupplier.ID" />
+                                    <input type="hidden" name="SupplierId" value="@currentSupplier.ID" />
                                     <button type="submit" class="btn btn-primary btn-success btn-sm">Order</button>
                                 </form>
                             </td>
