--- a/wwwroot/css/ModelInfo.css
+++ b/wwwroot/css/ModelInfo.css
@@ -17,6 +17,7 @@
     max-height: 300px;
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
+    margin-top: 3em;
 }
 
 .text-content {
