--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -20,40 +20,92 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-          <ul class="navbar-nav flex-grow-1">
-            <li class="nav-item">
-              <a class="nav-link text-dark" asp-area="" asp-controller="Order" asp-action="OrderForm">Order Form</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-dark" asp-area="" asp-controller="Order" asp-action="SpecialOrderForm">Special
-                Order Form</a>
-            </li>
-          </ul>
-          <ul class="navbar-nav ml-auto">
-            @if (user.IsAdmin())
-            {
+          @* <ul class="navbar-nav flex-grow-1">
+          <li class="nav-item">
+          <a class="nav-link text-dark" asp-area="" asp-controller="Order" asp-action="OrderForm">Order Form</a>
+          </li>
+          <li class="nav-item">
+          <a class="nav-link text-dark" asp-area="" asp-controller="Order" asp-action="SpecialOrderForm">Special
+          Order Form</a>
+          </li>
+          </ul> *@
+
+          @if (user.IsAdmin())
+          {
+            <ul class="navbar-nav flex-grow-1">
+              <li class="nav-item">
+                <a class="nav-link text-dark" asp-controller="Model" asp-action="HandleModels">Manage models</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-dark" asp-controller="Supplier" asp-action="HandleSupplier">Handle suppliers</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-dark" asp-controller="Material" asp-action="ManageMaterial">Manage materials</a>
+              </li>
+            </ul>
+            <ul class="navbar-nav ml-auto">
               <li class="nav-item">
                 <a class="nav-link text-dark" asp-controller="Admin" asp-action="Index">Administration</a>
               </li>
-            }
-            @if (!user.IsLoggedIn())
-            {
-              <li class="nav-item">
-                <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Login">Login</a>
-              </li>
-            }
-            else
-            {
               <li class="nav-item">
                 <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="LogOut">Log out</a>
               </li>
-            }
-            @if (!user.IsLoggedIn())
-            {
+            </ul>
+          }
+          else
+          {
+            <ul class="navbar-nav flex-grow-1">
               <li class="nav-item">
-                <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Register">Register</a>
+                <a class="nav-link text-dark" asp-area="" asp-controller="Order" asp-action="OrderForm">Order Form</a>
               </li>
-            }
+              <li class="nav-item">
+                <a class="nav-link text-dark" asp-area="" asp-controller="Order" asp-action="SpecialOrderForm">Special
+                  Order Form</a>
+              </li>
+            </ul>
+            <ul class="navbar-nav ml-auto">
+              @if (!user.IsLoggedIn())
+              {
+                <li class="nav-item">
+                  <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Login">Login</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Register">Register</a>
+                </li>
+              }
+              else
+              {
+                <li class="nav-item">
+                  <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="LogOut">Log out</a>
+                </li>
+              }
+            </ul>
+          }
+
+          @* @if (user.IsAdmin())
+          {
+          <li class="nav-item">
+          <a class="nav-link text-dark" asp-controller="Admin" asp-action="Index">Administration</a>
+          </li>
+          }
+          @if (!user.IsLoggedIn())
+          {
+          <li class="nav-item">
+          <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Login">Login</a>
+          </li>
+          }
+          else
+          {
+          <li class="nav-item">
+          <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="LogOut">Log out</a>
+          </li>
+          }
+          @if (!user.IsLoggedIn())
+          {
+          <li class="nav-item">
+          <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Register">Register</a>
+          </li>
+          } *@
           </ul>
         </div>
       </div>
