--- a/Views/Supplier/EditSupplier.cshtml
+++ b/Views/Supplier/EditSupplier.cshtml
@@ -4,7 +4,7 @@
 <form method="post" asp-action="SaveEdit">
     <div class="container">
         <div class="row">
-            <h2>SELECTED MODEL</h2>
+            <h2>MANAGE SUPPLIER</h2>
             <br />
             <div class="form-group">
                 <div class="row">
