--- a/Views/Supplier/HandleSupplier.cshtml
+++ b/Views/Supplier/HandleSupplier.cshtml
@@ -29,7 +29,7 @@
                                 <ul>
                                     @foreach (var material in currentSupplier.Materials)
                                     {
-                                        <li>@material.Name</li>
+                                        <li style="list-style: none;">@material.Name</li>
                                     }
                                 </ul>
                             </td>
