--- a/Views/Supplier/HandleSupplier.cshtml
+++ b/Views/Supplier/HandleSupplier.cshtml
@@ -49,6 +49,7 @@
                                 </form>
                             </td>
                             <td>
+                                *@*LÄGG TILL LÄNK TILL ORDER VY*@
                                 <form method="post" asp-action="DeleteModel">
                                     <input type="hidden" name="SupplierId" value="@currentSupplier.ID" />
                                     <button type="submit" class="btn btn-primary btn-success btn-sm">Order</button>
