--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -78,6 +78,11 @@
                 <li class="nav-item">
                   <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="LogOut">Log out</a>
                 </li>
+                <li class="nav-item">
+                  <a class="nav-link text-dark" asp-area="" asp-controller="Cart" asp-action="Index">
+                                        <btn class="cartbutton"><img src="~/Images/shoppingcart.png" alt="Shopping Cart" class="cart-image"></btn>
+                  </a>
+                </li>
               }
             </ul>
           }
