--- a/Views/Order/Confirm.cshtml
+++ b/Views/Order/Confirm.cshtml
@@ -1,6 +1,6 @@
 @model Order
 
-<h1 style="text-color: rgb(4, 249, 4);">ORDER CONFIRMED</h1>
+<h1 style="color: rgb(4, 249, 4);">ORDER CONFIRMED</h1>
 <div>
     <div>
         <h4>Your order has been placed.</h4>
