--- a/Views/Material/ManageMaterial.cshtml
+++ b/Views/Material/ManageMaterial.cshtml
@@ -18,6 +18,7 @@
                                 <th scope="col">Current amount</th>
                                 <th scope="col"></th>
                                 <th scope="col"></th>
+                                <th scope="col"></th>
                             </tr>
                         </thead>
                         <tbody>
@@ -42,6 +43,12 @@
                                             <form method="post" asp-action="DeleteMaterial">
                                                 <input type="hidden" name="MaterialId" value="@material.ID" />
                                                 <button type="submit" class="btn btn-primary btn-danger btn-sm">Delete</button>
+                                            </form>
+                                        </td>
+                                        <td>
+                                            <form method="post" asp-action="OrderMaterial">
+                                                <input type="hidden" name="MaterialId" value="@material.ID" />
+                                                <button type="submit" class="btn btn-primary btn-success btn-sm">Order</button>
                                             </form>
                                         </td>
                                     </tr>
