--- a/Views/Cart/Index.cshtml
+++ b/Views/Cart/Index.cshtml
@@ -2,12 +2,23 @@
 
 <h1>Shopping Cart</h1>
 
-@foreach(var item in Model.hats)
-{
-    <tr>
-        <img class="cartpicture" src="@item.Model.ImagePath">
-        <td>@item.Model.ModelName</td>
-        <td>@item.Description</td>
-        <td>@item.Price</td>
-    </tr>
-}
+<link rel="stylesheet" href="~/css/CartOverview.css">
+
+<form method="post" action="@Url.Action("ConfirmCart", "Cart")">
+    @foreach (var item in Model.hats)
+    {
+        <div class="cart-item">
+            <img class="cart-picture" src="@item.Model.ImagePath" alt="Hat Image">
+            <div class="cart-details">
+                <div class="model-name">Model Name: @item.Model.ModelName</div>
+                <div class="description">Description: @item.Description</div>
+                <div class="price">Price: @item.Price</div>
+            </div>
+        </div>
+    }
+
+    <div class="confirm-button">
+        <button type="submit" class="confirm-order-button">Confirm Order</button>
+    </div>
+</form>
+
