--- a/Views/Cart/Index.cshtml
+++ b/Views/Cart/Index.cshtml
@@ -11,6 +11,7 @@
             <img class="cart-picture" src="@item.Model.ImagePath" alt="Hat Image">
             <div class="cart-details">
                 <div class="model-name">Model Name: @item.Model.ModelName</div>
+                <div class="size">Size: @item.Size</div>
                 <div class="description">Description: @item.Description</div>
                 <div class="price">Price: @item.Price</div>
             </div>
