--- a/Views/Model/ModelInfo.cshtml
+++ b/Views/Model/ModelInfo.cshtml
@@ -70,6 +70,9 @@
                     <input asp-for="Description" class="form-control" id="Description" />
                     <p><i>Please enter information that is critical for the hat making</i></p>
                 </div>
+                <div class="form-group">
+                    <h4>Price from: @ViewBag.Price SEK</h4>
+                </div>
                 <input type="submit" value="Add to Cart" class="btn btn-primary">
             </form>
         </div>
